--- a/index.html
+++ b/index.html
@@ -1,179 +1,87 @@
 <!DOCTYPE html>
-<html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyEvent - Venta de entradas para eventos</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-
-    <header>
-        <h1>MyEvent - Venta de entradas para eventos</h1>
-    </header>
-
-    <nav>
-        <a href="#inicio">Inicio</a>
-        <a href="#eventos">Eventos</a>
-        <a href="#testimonios">Testimonios</a>
-        <a href="#nosotros">Nosotros</a>
-        <a href="#registrate">Regístrate</a>
-    </nav>
-
-    <div class="inicio" id="inicio">
-        <div class="inicio-content">
-            <h2>Bienvenido a MyEvent</h2>
-            <p>La creación de una aplicación web para la venta de entradas a conciertos, eventos, discotecas y otros
-                espectáculos es un proyecto que requiere atención meticulosa para satisfacer las necesidades tanto de
-                los usuarios finales como de los organizadores de eventos. En este informe, se detallarán los
-                principales aspectos a considerar para el desarrollo de la aplicación, incluyendo funcionalidades clave
-                y políticas de monetización.</p>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Web Design Mastery | Explore Destinations</title>
+  </head>
+  <body>
+    <div class="container">
+      <nav>
+        <div class="nav__logo">
+          <img src="assets/MY.png" alt="logo" />
         </div>
+        <ul class="nav__links">
+          <li class="link"><a href="#">Inicio</a></li>
+          <li class="link"><a href="/MyEvent/myevent.html">MyEvent</a></li>
+          <li class="link"><a href="/Nosotros/nosotros.html">Nosotros</a></li>
+          <li class="link"><a href="#">Contactanos</a></li>
+        </ul>
+        <div class="search">
+          <input type="text" placeholder="Search" />
+          <span><i class="ri-search-line"></i></span>
+        </div>
+        <div class="login">
+          <span><i class="ri-user-3-fill"></i></span>
+          Log In
+        </div>
+      </nav>
+      <div class="destination__container">
+        <img class="bg__img__1" src="assets/bg-dots.png" alt="bg" />
+        <img class="bg__img__2" src="assets/bg-arrow.png" alt="bg" />
+        <div class="socials">
+        </div>
+        <div class="content">
+          <h1>VIVE <br /><span>LA MEJOR </span>EXPERIENCIA<br /></h1>
+          <p>
+            Descubre los conciertos, eventos y discotecas que tenemos para ti. Estamos 
+            aquí para acercarte a las mejores experiencias de entretenimiento.
+            Encuentra eventos emocionantes cerca de ti y obtén tus entradas en un abrir
+            y cerrar de ojos. ¡Explora, reserva y disfruta fácilmente con nosotros!
+          </p>
+          <button class="btn">COMPRAR ENTRADAS</button>
+        </div>
+        <div class="destination__grid">
+          <div class="destination__card">
+            <img src="assets/discoteca.jpg" alt="destination" height="315px"/>
+            <div class="card__content">
+              <h4>Discotecas</h4>
+              <p>
+                Las mejores discotecas de Perú, con la mejor música y ambiente.
+                Encuentra la discoteca perfecta para ti y tus amigos.
+              </p>
+              <button class="btn">Leer más</button>
+            </div>
+          </div>
+          <div class="destination__card">
+            <img src="assets/concierto.jpg" alt="destination" width="100%" height="315px"/>
+            <div class="card__content">
+              <h4>Conciertos</h4>
+              <p>
+                Tus artistas favoritos en un solo lugar. Encuentra los conciertos
+                más esperados y compra tus entradas antes de que se agoten.
+              </p>
+              <button class="btn">Leer más</button>
+            </div>
+          </div>
+          <div class="destination__card">
+            <img src="assets/evento.jpg" alt="destination" height="315px" />
+            <div class="card__content">
+              <h4>Eventos</h4>
+              <p>
+                Shows de Teatro, Festivales, Eventos Deportivos, Conferencias y más.
+                Encuentra los eventos más emocionantes cerca de ti.
+              </p>
+              <button class="btn">Leer más</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <div class="container" id="eventos">
-        <h2>Próximos eventos</h2>
-        <div class="eventos-container">
-            <div class="event-card">
-                <img src="imagenes/evento1.jpg" alt="Evento 1">
-                <div class="event-info">
-                    <h3>Duki</h3>
-                    <p>Lugar: Costa 21</p>
-                    <p>Fecha: 5 de mayo de 2024</p>
-                    <p>Categoria: Concierto</p>
-                </div>
-            </div>
-            <!-- Repite esta estructura para cada evento -->
-            <div class="event-card">
-                <img src="imagenes/evento2.png" alt="Evento 1">
-                <div class="event-info">
-                    <h3>Carlos Vives</h3>
-                    <p>Lugar: Arena 1</p>
-                    <p>Fecha: 28 de mayo de 2024</p>
-                    <p>Categoria: Concierto</p>
-                </div>
-            </div>
-            <div class="event-card">
-                <img src="imagenes/evento5.jpg" alt="Evento 1">
-                <div class="event-info">
-                    <h3>Mon Laferte</h3>
-                    <p>Lugar: Anfiteatro Parque de la Exposición</p>
-                    <p>Fecha: 29 de septiembre 2024</p>
-                    <p>Categoria: Concierto</p>
-                </div>
-            </div>
-            <div class="event-card">
-                <img src="imagenes/evento4.jpg" alt="Evento 1">
-                <div class="event-info">
-                    <h3>Charanga Habanera</h3>
-                    <p>Lugar: Fronteras Unidas - Independencia</p>
-                    <p>Fecha: 14 de abril de 2024</p>
-                    <p>Categoria: Concierto</p>
-                </div>
-            </div>
-            <div class="event-card">
-                <img src="imagenes/evento3.jpg" alt="Evento 1">
-                <div class="event-info">
-                    <h3>Maná </h3>
-                    <p>Lugar: Lima, Perú</p>
-                    <p>Fecha: 17 de abril 2024</p>
-                    <p>Categoria: Concierto</p>
-                </div>
-            </div>
-            <div class="event-card">
-                <img src="imagenes/evento6.jpg" alt="Evento 1">
-                <div class="event-info">
-                    <h3>Grupo 5</h3>
-                    <p>Lugar: La estancia de Monsefú</p>
-                    <p>Fecha: 1 de enero 2025</p>
-                    <p>Categoria: Concierto</p>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="container" id="testimonios">
-        <h2>Testimonios</h2>
-        <div id="testimonials-container" class="testimonials-container">
-            <!-- Aquí se mostrarán los testimonios con JavaScript -->
-        </div>
-        <div class="navigation">
-            <button id="prev-btn"><img src="izq.png"></button>
-            <button id="next-btn"><img src="der.png"></button>
-        </div>
-    </div>
-
-    <div class="container" id="nosotros">
-        <h2>Nosotros</h2>
-        <p>MyEvent es una plataforma dedicada a brindar la mejor experiencia en la compra y venta de entradas para una
-            amplia variedad de eventos en Lima y sus alrededores. Nos esforzamos por conectar a los amantes de la
-            música, el entretenimiento y la diversión con los eventos más emocionantes y relevantes.</p>
-        <p>Nuestro equipo está comprometido en proporcionar un servicio confiable, seguro y fácil de usar. Trabajamos en
-            estrecha colaboración con organizadores de eventos y usuarios para asegurarnos de que cada experiencia en
-            MyEvent sea memorable y satisfactoria.</p>
-    </div>
-
-    <div class="registro">
-        <div class="form-container">
-            <div class="options">
-                <button class="active" onclick="showRegisterForm()">Registrarse</button>
-                <button onclick="showLoginForm()">Iniciar Sesión</button>
-            </div>
-            <div id="registro-form">
-                <form>
-                    <div class="form-group">
-                        <label for="nombre">Nombre</label>
-                        <input type="text" id="nombre" name="nombre" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="apellido">Apellido</label>
-                        <input type="text" id="apellido" name="apellido" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="correo">Correo</label>
-                        <input type="email" id="correo" name="correo" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="dni">DNI</label>
-                        <input type="text" id="dni" name="dni" pattern="[0-9]{8}"
-                            title="Debe contener 8 dígitos numéricos" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="contraseña">Contraseña</label>
-                        <input type="password" id="contraseña" name="contraseña" minlength="8" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="confirm-contraseña">Repetir Contraseña</label>
-                        <input type="password" id="confirm-contraseña" name="confirm-contraseña" minlength="8" required>
-                    </div>
-                    <button type="submit">Registrarse</button>
-                </form>
-            </div>
-            <div id="login-form" style="display: none;">
-                <form>
-                    <div class="form-group">
-                        <label for="login-correo">Correo</label>
-                        <input type="email" id="login-correo" name="login-correo" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="login-contraseña">Contraseña</label>
-                        <input type="password" id="login-contraseña" name="login-contraseña" required>
-                    </div>
-                    <button type="submit">Iniciar Sesión</button>
-                </form>
-            </div>
-        </div>
-        <div class="image-container">
-            <img src="/imagenes/login.jpg" alt="Imagen">
-        </div>
-    </div>
-
-
-    <script src="script.js"></script>
-    <script src="script2.js"></script>
-</body>
-
+  </body>
 </html>
