--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design Mastery | Explore Destinations</title>
+    <title>MyEvent</title>
   </head>
   <body>
     <div class="container">
