--- a/Nosotros/nosotros.html
+++ b/Nosotros/nosotros.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design Mastery | Explore Destinations</title>
+    <title>My Event Nosotros</title>
  </head>
  <body>
     <div class="container">
