--- a/MyEvent/myevent.html
+++ b/MyEvent/myevent.html
@@ -19,7 +19,7 @@
         <li class="link"><a href="/index.html">Inicio</a></li>
         <li class="link"><a href="#">MyEvent</a></li>
         <li class="link"><a href="/Nosotros/nosotros.html">Nosotros</a></li>
-        <li class="link"><a href="#">Contactanos</a></li>
+        <li class="link"><a href="/Contacto/contacto.html">Contactanos</a></li>
       </ul>
       <div class="search">
         <input type="text" placeholder="Search" />
