--- a/Nosotros/nosotros.html
+++ b/Nosotros/nosotros.html
@@ -17,7 +17,7 @@
           <li class="link"><a href="/index.html">Inicio</a></li>
           <li class="link"><a href="/MyEvent/myevent.html">MyEvent</a></li>
           <li class="link"><a href="#">Nosotros</a></li>
-          <li class="link"><a href="#">Contactanos</a></li>
+          <li class="link"><a href="/Contacto/contacto.html">Contactanos</a></li>
         </ul>
         <div class="search">
           <input type="text" placeholder="Search" />
