--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li class="link"><a href="#">Inicio</a></li>
           <li class="link"><a href="/MyEvent/myevent.html">MyEvent</a></li>
           <li class="link"><a href="/Nosotros/nosotros.html">Nosotros</a></li>
-          <li class="link"><a href="#">Contactanos</a></li>
+          <li class="link"><a href="/Contacto/contacto.html">Contactanos</a></li>
         </ul>
         <div class="search">
           <input type="text" placeholder="Search" />
