--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <nav>
         <div class="nav__logo">
-          <img src="assets/MY.png" alt="logo" />
+          <img href="https://master--effulgent-nougat-ae816b.netlify.app/home" src="assets/MY.png" alt="logo" />
         </div>
         <ul class="nav__links">
           <li class="link"><a href="#">Inicio</a></li>
