--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <img href="https://master--effulgent-nougat-ae816b.netlify.app/home" src="assets/MY.png" alt="logo" />
         </div>
         <ul class="nav__links">
-          <li class="link"><a href="#">Inicio</a></li>
+          <li class="link"><a href="https://master--effulgent-nougat-ae816b.netlify.app/home">Inicio</a></li>
           <li class="link"><a href="/MyEvent/myevent.html">MyEvent</a></li>
           <li class="link"><a href="/Nosotros/nosotros.html">Nosotros</a></li>
           <li class="link"><a href="/Contacto/contacto.html">Contactanos</a></li>
