fix: redirección a pagina principal

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="container">
       <nav>
         <div class="nav__logo">
-          <img href="https://master--effulgent-nougat-ae816b.netlify.app/" src="assets/MY.png" alt="logo" />
+          <img src="assets/MY.png" alt="logo" />
         </div>
         <ul class="nav__links">
-          <li class="link"><a href="https://master--effulgent-nougat-ae816b.netlify.app/home">Inicio</a></li>
+          <li class="link"><a href="https://master--effulgent-nougat-ae816b.netlify.app/">Inicio</a></li>
           <li class="link"><a href="/MyEvent/myevent.html">MyEvent</a></li>
           <li class="link"><a href="/Nosotros/nosotros.html">Nosotros</a></li>
           <li class="link"><a href="/Contacto/contacto.html">Contactanos</a></li>
