--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -16,10 +16,10 @@
                 <img src="/assets/MY.png" alt="logo" />
             </div>
             <ul class="nav__links">
-                <li class="link"><a href="href=https://master--effulgent-nougat-ae816b.netlify.app/">Inicio</a></li>
+                <li class="link"><a href="/index.html">Inicio</a></li>
                 <li class="link"><a href="/MyEvent/myevent.html">MyEvent</a></li>
                 <li class="link"><a href="/Nosotros/nosotros.html">Nosotros</a></li>
-                <li class="link"><a href="#">Contactanos</a></li>
+                <li class="link"><a href="href=https://master--effulgent-nougat-ae816b.netlify.app/">Contactanos</a></li>
             </ul>
             <div class="search">
                 <input type="text" placeholder="Search" />
