--- a/MyEvent/myevent.html
+++ b/MyEvent/myevent.html
@@ -16,8 +16,8 @@
         <img src="/assets/MY.png" alt="logo" />
       </div>
       <ul class="nav__links">
-        <li class="link"><a href="href=https://master--effulgent-nougat-ae816b.netlify.app/">Inicio</a></li>
-        <li class="link"><a href="#">MyEvent</a></li>
+        <li class="link"><a href="/index.html">Inicio</a></li>
+        <li class="link"><a href="https://master--effulgent-nougat-ae816b.netlify.app/">MyEvent</a></li>
         <li class="link"><a href="/Nosotros/nosotros.html">Nosotros</a></li>
         <li class="link"><a href="/Contacto/contacto.html">Contactanos</a></li>
       </ul>
