--- a/Nosotros/nosotros.html
+++ b/Nosotros/nosotros.html
@@ -14,9 +14,9 @@
           <img src="/assets/MY.png" alt="logo" />
         </div>
         <ul class="nav__links">
-          <li class="link"><a href="href=https://master--effulgent-nougat-ae816b.netlify.app/">Inicio</a></li>
+          <li class="link"><a href="/index.html">Inicio</a></li>
           <li class="link"><a href="/MyEvent/myevent.html">MyEvent</a></li>
-          <li class="link"><a href="#">Nosotros</a></li>
+          <li class="link"><a href="href=https://master--effulgent-nougat-ae816b.netlify.app/">Nosotros</a></li>
           <li class="link"><a href="/Contacto/contacto.html">Contactanos</a></li>
         </ul>
         <div class="search">
